# glyphatlas-pdf

./: .gitignore  README.md  config.py  main.py  main_refactored.py  prueba_onnx.py  pyproject.toml
docs/: ARCHITECTURE.md
src/: __init__.py
src/ocr/: __init__.py  engine.py  word_splitter.py
src/pdf/: __init__.py  analyzer.py  converter.py  generator.py  image_extractor.py  text_extractor.py
src/utils/: __init__.py  io.py  profiler.py  validators.py
src/visualization/: __init__.py  drawer.py
tools/: analyze_performance.py  censura.py  generate_pdf_from_json.py
