[project]
name = "glyphatlas-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime>=1.23.2",
    "onnxtr[cpu,html,viz]>=0.8.1",
    "paddleocr>=3.3.3",
    "paddlepaddle==3.2.0",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
]
